src/styles/pages/Home.scss
@import "../variables.scss";
.home-page {
  max-width: 100vw;
  height: 100vh;
  scroll-behavior: smooth;
  overflow: overlay;
  scroll-snap-type: y mandatory;
}
.hero-section {
  max-width: 100vw;
  height: 100vh;
  background-color: #f2f2f2;
  display: flex;
  align-items: center;
  justify-content: center;
  scroll-snap-align: start;
}

.hero-section2 {
  width: 100%;
  height: calc(100vh - 90px);
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-between;
  scroll-snap-align: end; // control where to stop after scrolling
  // border: 1px solid red;
  margin-top: 90px;
  // position: relative;

  .welcome-title-container {
    width: 60%;
    height: 15%;
    // border: 1px solid black;
    display: flex;
    align-items: center;
    justify-content: flex-end;
    // margin-bottom: 0px;
    // border: 1px solid black;

    .welcome-title {
      padding-top: 32px;
      font-size: 28px;
      letter-spacing: 1px;
      color: #1f5ca2;
      font-weight: 900;
      line-height: 42px;
      font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
        "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
    }
  }
  .welcome-waves {
    // border: 1px solid black;
    width: 100%;
    height: 30%;
    background-image: url("../../../public/imgs/waves.jpg");
    // background-attachment: fixed;

    background-size: 100% 100%;
    background-position: center;
    background-repeat: no-repeat;
    // position: absolute;
    // top: 15vh;
  }
  .welcome-content-container {
    width: 70%;
    height: 50%;
    // background-color: black;
    // border: 1px solid black;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-evenly;
    .welcome-last-1 {
      // background-color: orange;
      width: 100%;
      height: 140px;

      // background-color: red;
      .welcome-content {
        font-size: 18px;
        margin-top: 0px;
        // background-color: blue;
        font-weight: 400;
        letter-spacing: 0.5px;
        line-height: 28px;
        font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
          "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
      }
    }
    .welcome-last-2 {
      width: 100%;
      height: 60px;
      // background-color: black;
      display: flex;
      flex-direction: column;
      align-items: center;
      justify-content: flex-start;
      .welcome-owner-txt {
        margin-top: 14px;
        // width: 100%;
        height: 100%;
        font-size: 18px;
        // color: #1f5ca2;
        font-weight: 700;
        letter-spacing: 0.75px;
        line-height: 32px;
        // background-color: green;
        // transform: rotate(-3deg);
        font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
          "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
        cursor: pointer;
      }
      .welcome-owner-txt:hover {
        color: #20ade4;
        transform: rotate(-0.75deg);
      }
    }
    .welcome-btn {
      width: 100%;
      height: 70px;
      display: flex;
      align-items: center;
      justify-content: center;
      // background-color: red;
    }
  }
}
.hero-section3 {
  height: 100vh;
  background-color: #fff;
  scroll-snap-align: start;

  .last-section-container {
    width: 100%;
    height: calc(100% - 98px);
    background-color: #1f5ca2;
    display: flex;
    position: relative;
    top: 100px;
    .wave {
      position: absolute;
      top: 0;
      left: 0;
      width: 100%;
      height: 100px;
      background: #fff url("../../../public/imgs/wave-footer.png");
      background-size: 70vw 100px;
    }
    .wave#wave-1 {
      z-index: 100;
      opacity: 1;
      bottom: 0;
      animation: animateWave 5s linear infinite;
      animation-play-state: paused;
    }
    .wave#wave-1:hover {
      animation-play-state: running;
    }
    .wave#wave-2 {
      z-index: 99;
      opacity: 0.5;
      bottom: 10px;
      animation: animateWave2 5s linear infinite;
      animation-play-state: running;
    }

    @keyframes animateWave {
      0% {
        background-position-x: 70vw;
      }
      100% {
        background-position-x: 0px;
      }
    }
    @keyframes animateWave2 {
      0% {
        background-position-x: 0;
      }
      100% {
        background-position-x: 70vw;
      }
    }
  }
}

